# rod-ros

./: .gitignore  README.md
devel/: .catkin  .rosinstall  setup.sh
devel/share/RoboCar/cmake/: RoboCarConfig.cmake
devel/share/beginner_tutorials/cmake/: beginner_tutorialsConfig.cmake
devel/share/cv_image_filter/cmake/: cv_image_filterConfig.cmake
devel/share/rod_launch/cmake/: rod_launchConfig.cmake
devel/share/usb_cam/cmake/: usb_camConfig.cmake
install/: .rosinstall  _setup_util.py  setup.sh
install/include/beginner_tutorials/: AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
install/share/beginner_tutorials/: package.xml
install/share/beginner_tutorials/cmake/: beginner_tutorialsConfig.cmake
install/share/cv_image_filter/cmake/: cv_image_filterConfig.cmake
install/share/my_pcl_tutorial/: package.xml
install/share/my_pcl_tutorial/cmake/: my_pcl_tutorialConfig.cmake
install/share/rod_launch/: package.xml
install/share/rod_launch/cmake/: rod_launchConfig.cmake
install/share/roseus/ros/beginner_tutorials/: manifest.l
install/share/usb_cam/cmake/: usb_camConfig.cmake
src/: .gitattributes  49-teensy.rules  Required_Packages  Required_Packages.sh  udevrules.rules
src/RoboCar/: CMakeLists.txt  package.xml
src/RoboCar/launch/: robocar_master.launch
src/RoboCar/src/: diffodom.cpp
src/beginner_tutorials/: CMakeLists.txt
src/beginner_tutorials/bagfiles/: 2017-04-16-15-54-24.bag
src/beginner_tutorials/launch/: testcomm.launch  turtlemimic.launch
src/beginner_tutorials/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  listener.cpp  talker.cpp
src/cv_image_filter/: CMakeLists.txt  package.xml
src/cv_image_filter/src/: depth_threshold.cpp  depthimage_filter.cpp  simple_capture.cpp
src/depthimage_to_laserscan/src/: DepthImageToLaserScanNodelet.cpp
src/maurice_bringup/: CMakeLists.txt  package.xml
src/maurice_bringup/launch/: maurice_master.launch  maurice_simulator.launch  playback_bag.launch
src/maurice_control/: CMakeLists.txt  package.xml
src/maurice_control/config/: maurice_control.yaml
src/maurice_control/launch/: maurice_control.launch  maurice_rqt.launch  maurice_rqt.perspective
src/maurice_control/src/: diffdrive_cmdvel.cpp  diffdrive_odometry.cpp
src/maurice_description/: CMakeLists.txt  package.xml
src/maurice_description/config/: robot_common_params.yaml
src/maurice_description/launch/: maurice.rviz  maurice_rviz.launch
src/maurice_description/media/materials/scripts/: custom.material
src/maurice_description/urdf/: macros.xacro  materials.xacro  maurice.gazebo  maurice.xacro
src/maurice_gazebo/: CMakeLists.txt  package.xml
src/maurice_gazebo/launch/: maurice_world.launch
src/maurice_gazebo/worlds/: maurice.world
src/maurice_hardware/: CMakeLists.txt  package.xml
src/maurice_hardware/arduino/CUI_Encoder_Test/: CUI_Encoder_Test.ino
src/maurice_hardware/arduino/CytronTest/: CytronTest.ino
src/maurice_hardware/arduino/OdomTest/: OdomTest.ino
src/maurice_hardware/arduino/ServoScanner/: ServoScanner.ino
src/maurice_hardware/config/: robot_common_params.yaml  rtkrcv.conf  sparkfun_rtk2.yaml
src/maurice_hardware/launch/: display_camera.launch  joyop_cmdvel.launch  machine_communication.launch  pseye.launch  sensor_spawn.launch  ublox_gps.launch
src/maurice_hardware/scripts/: corrections.sh  str2str
src/maurice_hardware/src/: joyop_cmdvel.cpp  maurice_serial_comm.cpp
src/maurice_localization/: CMakeLists.txt  package.xml
src/maurice_localization/launch/: single_ekf.launch
src/maurice_localization/params/: wheel_imu.yaml
src/my_pcl_tutorial/: CMakeLists.txt
src/myrobot_description/: CMakeLists.txt  package.xml
src/myrobot_gazebo/: CMakeLists.txt  package.xml
src/robo_mower/: CMakeLists.txt  package.xml
src/robo_mower/arduino/BrushlessMotorTest/: BrushlessMotorTest.ino
src/robo_mower/arduino/CUI_Encoder_Test/: CUI_Encoder_Test.ino
src/robo_mower/arduino/CytronTest/: CytronTest.ino
src/robo_mower/arduino/OdomTest/: OdomTest.ino
src/robo_mower/arduino/OdometryDIff/: OdometryDIff.ino
src/robo_mower/arduino/ServoScanner/: ServoScanner.ino
src/robo_mower/arduino/libraries/Cytron/: Cytron.cpp  Cytron.h
src/robo_mower/arduino/libraries/ESC/: ESC.cpp  ESC.h
src/robo_mower/launch/: joyop_cmdvel.launch  machine_control.launch  phidgets_imu.launch  record_bag.launch  robo_mower_master.launch  robo_mower_tf.launch  sensor_spawn.launch
src/robo_mower/src/: joyop_cmdvel.cpp  wheel_odometry.cpp
src/robocar/: CMakeLists.txt  package.xml
src/robocar/arduino/OdometryDIff/: OdometryDIff.ino
src/robocar/launch/: machine_control.launch  realsense2scan.launch  robocar_master.launch  robocar_tf.launch
src/robocar/src/: diffodom.cpp
src/rod_launch/: CMakeLists.txt  cameraview.launch  gazebotest.launch  masking.launch  pointcloudtest.launch  realsensef200.launch  realsenser200.launch  realsensetest.launch
src/rtklib_ros_bridge/: install_rtklib.sh
